<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp">

    <ImageView
        android:id="@+id/la_ivLogo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/la_tvWelcomeTitle"
        android:layout_below="@id/la_ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Welcome to Online Shopping,"
        android:textColor="#000"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="@dimen/_16sdp"
        />

    <TextView
        android:id="@+id/la_tvWelcomeSubtitle"
        android:layout_below="@id/la_tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please login to continue"
        android:textColor="#000"
        android:fontFamily="@font/open_sans_light"
        android:textSize="@dimen/_16sdp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/la_tvWelcomeSubtitle"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_marginTop="@dimen/_75sdp"
        >

        <EditText
            android:id="@+id/la_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:fontFamily="@font/open_sans"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/la_password"
            android:layout_below="@id/la_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="Enter Password"
            android:fontFamily="@font/open_sans"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/la_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/la_password"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/open_sans_bold"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/_13sdp"
            />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_28sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/la_btnLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:text="New User?"
        android:textColor="#363636"
        android:textSize="@dimen/_11sdp"/>

        <TextView
            android:id="@+id/la_tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_4sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="Sign Up"
            android:textColor="#3d5afe"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>

    </LinearLayout>

    </RelativeLayout>

</ScrollView>